syntax = "proto3";

option java_package = "com.javatecharc.grpc";
option java_multiple_files = true;

service GreetingService {
    rpc sayHello (GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
    string name = 1;
}

message GreetingResponse {
    string message = 1;
}
